Fix alignment of .search-input text in .search-container

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ header .logo {
   float: left;
   font-size: 0.9em;
   height: auto;
-  margin: 10px 5px 0 28px;
+  margin: 8px 5px 0px 12px;
   width: 185px; }
 
 .search-container .search-submit {
