--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -290,7 +290,7 @@ header .logo {
     float: left;
     font-size: 0.9em;
     height: auto;
-    margin: 10px 5px 0 28px;
+    margin: 8px 5px 0px 12px;
     width: 185px;
 }
 
